--- a/src/Style/mycart.css
+++ b/src/Style/mycart.css
@@ -63,22 +63,22 @@
 .card-product-quantity {
   display: inline-flex;
   flex-direction: row;
-  padding-bottom: 2rem;
+  font-size: 1rem;
 }
 
 .product-quantity-decrease,
 .product-quantity-increase {
   font-size: 1rem;
-  font-weight: 900;
   background-color: transparent;
   border-radius: 50%;
-  border: 2px solid var(--dark);
+  border: 1px solid var(--dark);
   padding: 0 3px;
 }
 
 .product-quantity-count {
-  text-align: center;
-  width: 2rem;
+  display: flex;
+  justify-content: center;
+  padding: 0.3rem;
 }
 
 .cart-billing-container {
